// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parsing steps > adds default focus 1`] = `
{
  "maxLineCount": 4,
  "showNumbers": false,
  "steps": [
    {
      "focus": {
        "0": true,
        "1": true,
        "2": true,
      },
      "focusCenter": 1.5,
      "focusCount": 3,
      "lines": [
        0,
        1,
        2,
      ],
      "longestLineIndex": 0,
      "subtitle": undefined,
      "title": undefined,
    },
    {
      "focus": {
        "2": true,
        "3": true,
      },
      "focusCenter": 3,
      "focusCount": 2,
      "lines": [
        0,
        2,
        3,
        4,
      ],
      "longestLineIndex": 3,
      "subtitle": undefined,
      "title": undefined,
    },
  ],
  "tokens": [
    [
      "console",
      ".",
      "log",
      "(",
      "1",
      ")",
    ],
    [
      "console",
      ".",
      "log",
      "(",
      "2",
      ")",
    ],
    [
      "console",
      ".",
      "log",
      "(",
      "3",
      ")",
    ],
    [
      "​",
    ],
    [
      "console",
      ".",
      "log",
      "(",
      "4",
      ")",
      ";",
    ],
  ],
  "types": [
    [
      "plain",
      "punctuation",
      "function",
      "punctuation",
      "number",
      "punctuation",
    ],
    [
      "plain",
      "punctuation",
      "function",
      "punctuation",
      "number",
      "punctuation",
    ],
    [
      "plain",
      "punctuation",
      "function",
      "punctuation",
      "number",
      "punctuation",
    ],
    [
      "plain",
    ],
    [
      "plain",
      "punctuation",
      "function",
      "punctuation",
      "number",
      "punctuation",
      "punctuation",
    ],
  ],
}
`;

exports[`Parsing steps > works 1`] = `
{
  "maxLineCount": 3,
  "showNumbers": false,
  "steps": [
    {
      "focus": {
        "0": true,
        "1": true,
      },
      "focusCenter": 1,
      "focusCount": 2,
      "lines": [
        0,
        1,
        2,
      ],
      "longestLineIndex": 0,
      "subtitle": undefined,
      "title": undefined,
    },
    {
      "focus": {
        "0": [
          2,
          3,
          4,
        ],
        "1": true,
      },
      "focusCenter": 1,
      "focusCount": 2,
      "lines": [
        0,
        2,
      ],
      "longestLineIndex": 0,
      "subtitle": undefined,
      "title": undefined,
    },
  ],
  "tokens": [
    [
      "c",
      "o",
      "n",
      "s",
      "o",
      "l",
      "e",
      ".",
      "l",
      "o",
      "g",
      "(",
      "1",
      ")",
    ],
    [
      "console",
      ".",
      "log",
      "(",
      "2",
      ")",
    ],
    [
      "console",
      ".",
      "log",
      "(",
      "3",
      ")",
    ],
  ],
  "types": [
    [
      "plain",
      "plain",
      "plain",
      "plain",
      "plain",
      "plain",
      "plain",
      "punctuation",
      "function",
      "function",
      "function",
      "punctuation",
      "number",
      "punctuation",
    ],
    [
      "plain",
      "punctuation",
      "function",
      "punctuation",
      "number",
      "punctuation",
    ],
    [
      "plain",
      "punctuation",
      "function",
      "punctuation",
      "number",
      "punctuation",
    ],
  ],
}
`;

exports[`Parsing steps > works with empty diff 1`] = `
{
  "maxLineCount": 3,
  "showNumbers": false,
  "steps": [
    {
      "focus": {
        "0": true,
        "1": true,
        "2": true,
      },
      "focusCenter": 1.5,
      "focusCount": 3,
      "lines": [
        0,
        1,
        2,
      ],
      "longestLineIndex": 0,
      "subtitle": undefined,
      "title": undefined,
    },
    {
      "focus": {
        "0": true,
        "1": true,
        "2": true,
      },
      "focusCenter": 1.5,
      "focusCount": 3,
      "lines": [
        0,
        1,
        2,
      ],
      "longestLineIndex": 0,
      "subtitle": undefined,
      "title": undefined,
    },
  ],
  "tokens": [
    [
      "console",
      ".",
      "log",
      "(",
      "1",
      ")",
    ],
    [
      "console",
      ".",
      "log",
      "(",
      "2",
      ")",
    ],
    [
      "console",
      ".",
      "log",
      "(",
      "3",
      ")",
    ],
  ],
  "types": [
    [
      "plain",
      "punctuation",
      "function",
      "punctuation",
      "number",
      "punctuation",
    ],
    [
      "plain",
      "punctuation",
      "function",
      "punctuation",
      "number",
      "punctuation",
    ],
    [
      "plain",
      "punctuation",
      "function",
      "punctuation",
      "number",
      "punctuation",
    ],
  ],
}
`;
